--- a/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
+++ b/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
@@ -94,31 +94,101 @@ distributed within the fiducial volume. Perfect knowledge of the vertex is assum
 
 \begin{figure*}[ht]
   \centering
-  \includegraphics[width=0.95\textwidth]{hMomNPhot_Te130vsC10_VtxSmear0cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
-  \caption{Comparison of total number of early photons between $^{130}$Te 0{\nbb} decay
-    and $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV.
-    Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
-    Perfect vertex reconstruction - true vertex position is used.}
+  \includegraphics[width=0.45\textwidth]{hMomDT_Te130vsC10_VtxSmear0cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130vsC10_VtxSmear0cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \caption{(Left) Difference between measured PE arrival time and arrival time prediction based on 
+	vertex location (T$^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$).
+        $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared. 
+	Vertical line at 1~ns indicates cut for early light selection. 
+        (Right) Total number of PEs in the early light sample. 
+        $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV are
+	selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
+        {\bf Perfect vertex reconstruction - true vertex position is used.}}
 \label{fig:NPhot_compare_rndVtx_noSmear}
 \end{figure*}
 
 
-Figure~\ref{fig:NPhot_compare_rndVtx_noSmear} compares total number of PEs for events uniformly
+Figure~\ref{fig:NPhot_compare_rndVtx_Smear3cm} compares total number of PEs for events uniformly
 distributed within the fiducial volume and reconstructed vertex smeared with 3~cm resolution.
 
 \begin{figure*}[ht]
   \centering
-  \includegraphics[width=0.95\textwidth]{hMomNPhot_Te130vsC10_VtxSmear3cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
-  \caption{Comparison of total number of early photons between $^{130}$Te 0{\nbb} decay
-    and $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV.
-    Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
-    Vetrex is smeared with 3~cm resolution.}
+  \includegraphics[width=0.45\textwidth]{hMomDT_Te130vsC10_VtxSmear3cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130vsC10_VtxSmear3cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \caption{(Left) Difference between measured PE arrival time and arrival time prediction based on
+        vertex location (T$^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$).
+        $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
+        Vertical line at 1~ns indicates cut for early light selection.
+        (Right) Total number of PEs in the early light sample.
+        $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV are
+        selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
+        {\bf Vetrex is smeared with 3~cm resolution.}}
 \label{fig:NPhot_compare_rndVtx_Smear3cm}
 \end{figure*}
 
 
+Figure~\ref{fig:NPhot_compare_rndVtx_Smear10cm} compares total number of PEs for events uniformly
+distributed within the fiducial volume and reconstructed vertex smeared with 10~cm resolution.
+
+\begin{figure*}[ht]
+  \centering
+  \includegraphics[width=0.45\textwidth]{hMomDT_Te130vsC10_VtxSmear10cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130vsC10_VtxSmear10cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \caption{(Left) Difference between measured PE arrival time and arrival time prediction based on
+        vertex location (T$^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$).
+        $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
+        Vertical line at 1~ns indicates cut for early light selection.
+        (Right) Total number of PEs in the early light sample.
+        $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV are
+        selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
+        {\bf Vetrex is smeared with 10~cm resolution.}}
+\label{fig:NPhot_compare_rndVtx_Smear10cm}
+\end{figure*}
 
 
+
+Figure~\ref{fig:NPhot_compare_rndVtx_Smear30cm} compares total number of PEs for events uniformly
+distributed within the fiducial volume and reconstructed vertex smeared with 30~cm resolution.
+
+\begin{figure*}[ht]
+  \centering
+  \includegraphics[width=0.45\textwidth]{hMomDT_Te130vsC10_VtxSmear30cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130vsC10_VtxSmear30cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \caption{(Left) Difference between measured PE arrival time and arrival time prediction based on
+        vertex location (T$^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$).
+        $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
+        Vertical line at 1~ns indicates cut for early light selection.
+        (Right) Total number of PEs in the early light sample.
+        $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV are
+        selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
+        {\bf Vetrex is smeared with 30~cm resolution.}}
+\label{fig:NPhot_compare_rndVtx_Smear30cm}
+\end{figure*}
+
+
+Figure~\ref{fig:NPhot_compare_rndVtx_Smear50cm} compares total number of PEs for events uniformly
+distributed within the fiducial volume and reconstructed vertex smeared with 50~cm resolution.
+
+\begin{figure*}[ht]
+  \centering
+  \includegraphics[width=0.45\textwidth]{hMomDT_Te130vsC10_VtxSmear50cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130vsC10_VtxSmear50cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \caption{(Left) Difference between measured PE arrival time and arrival time prediction based on
+        vertex location (T$^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$).
+        $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
+        Vertical line at 1~ns indicates cut for early light selection.
+        (Right) Total number of PEs in the early light sample.
+        $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV are
+        selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
+        {\bf Vetrex is smeared with 50~cm resolution.}}
+\label{fig:NPhot_compare_rndVtx_Smear50cm}
+\end{figure*}
+
+
+
+% !!!!!!!!!!!!	Commented text begins	!!!!!!!!!!!!!!!!!!!!!
+\begin{comment}
+\newpage
 
 \section{0{\nbb} decay vs $^{10}$C background}
 
@@ -175,7 +245,9 @@ PE arrival time distribution between $^{130}$Te 0{\nbb} decays and
 $^{10}$C events. The time profile of the scintillation photons can be used
 to separate signal from $^{10}$C events.
 
+\end{comment}
 
+%	!!!!!!!!!!!!!!!!	Commented text ends 	!!!!!!!!!!!!!!!!!!
 
 Comparison of $S_0$ and $S_1$ distributions between 0{\nbb} decay and
 $^{10}$C events is shown in Fig.~\ref{fig:S_vs_energy_C10}.
