Changing to 10% around Q-value

--- a/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
+++ b/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
@@ -1,9 +1,9 @@
 \section{Timing of photons coming from $^{10}$C background}
 
 Typical energy deposition by $^{10}$C events is shown in
-Fig.~\ref{fig:Edep_C10}. Assuming $\sim$15\% energy resolution, events in 
-the energy range of 2.1-2.9~MeV would contribute to the backgroung count in 
-the ROI.
+Fig.~\ref{fig:Edep_C10}. Vertical lines indicate Q-value of $\Te$ and 
+$\pm$10\% region around Q-value. In order to include detector energy resolution 
+effects we consider $\Cten$ events in this region, which is 2.276~MeV - 2.782~MeV.
 
 
 \begin{figure}[h]
@@ -71,7 +71,7 @@ separation between $\vbb$-decay and $\Cten$ events by counting total number of P
     for the simulation of 1000 $^{130}$Te 0{\nbb} decay (left panel)
     and of 648 $^{10}$C (\emph{right panel}) events (1000 $^{10}$C events was 
     generated, but selected only those that has total energy deposition in the 
-    detector in the range between 2.1 and 2.9~MeV).}
+    detector in the 10\% energy range around Q-value.}
 \label{fig:NPhotDist_C10}
 \end{figure*}
 
@@ -81,7 +81,7 @@ separation between $\vbb$-decay and $\Cten$ events by counting total number of P
   \centering
   \includegraphics[width=0.95\textwidth]{hMomNPhot_Te130vsC10_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
   \caption{Comparison of total number of early photons between $^{130}$Te 0{\nbb} decay 
-    and $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV. 
+    and $^{10}$C events with energy deposition in the 10\% energy range around Q-value. 
     Events originated at the center of the sphere.
     Perfect vertex reconstruction - true vertex position is used. Time cut of 
     33.5~ns on the photon arrival time is applied.}
@@ -101,7 +101,7 @@ distributed within the fiducial volume. Perfect knowledge of the vertex is assum
         $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared. 
 	Vertical line at 1~ns indicates cut for early light selection. 
         (Right) Total number of PEs in the early light sample. 
-        $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV are
+        $^{10}$C events with energy deposition in the 10\% energy range around Q-value are
 	selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
         {\bf Perfect vertex reconstruction - true vertex position is used.}}
 \label{fig:NPhot_compare_rndVtx_noSmear}
@@ -120,7 +120,7 @@ distributed within the fiducial volume and reconstructed vertex smeared with 3~c
         $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
         Vertical line at 1~ns indicates cut for early light selection.
         (Right) Total number of PEs in the early light sample.
-        $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV are
+        $^{10}$C events with energy deposition in the 10\% energy range around Q-value are
         selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
         {\bf Vetrex is smeared with 3~cm resolution.}}
 \label{fig:NPhot_compare_rndVtx_Smear3cm}
@@ -139,7 +139,7 @@ distributed within the fiducial volume and reconstructed vertex smeared with 10~
         $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
         Vertical line at 1~ns indicates cut for early light selection.
         (Right) Total number of PEs in the early light sample.
-        $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV are
+        $^{10}$C events with energy deposition in the 10\% energy range around Q-value are
         selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
         {\bf Vetrex is smeared with 10~cm resolution.}}
 \label{fig:NPhot_compare_rndVtx_Smear10cm}
@@ -159,7 +159,7 @@ distributed within the fiducial volume and reconstructed vertex smeared with 30~
         $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
         Vertical line at 1~ns indicates cut for early light selection.
         (Right) Total number of PEs in the early light sample.
-        $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV are
+        $^{10}$C events with energy deposition in the 10\% energy range around Q-value. are
         selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
         {\bf Vetrex is smeared with 30~cm resolution.}}
 \label{fig:NPhot_compare_rndVtx_Smear30cm}
@@ -178,7 +178,7 @@ distributed within the fiducial volume and reconstructed vertex smeared with 50~
         $\vbb$-decay (black solid line) and $\Cten$ events (magenta dashed line) are compared.
         Vertical line at 1~ns indicates cut for early light selection.
         (Right) Total number of PEs in the early light sample.
-        $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV are
+        $^{10}$C events with energy deposition in the 10\% energy range around Q-value are
         selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
         {\bf Vetrex is smeared with 50~cm resolution.}}
 \label{fig:NPhot_compare_rndVtx_Smear50cm}
