--- a/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
+++ b/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
@@ -1,5 +1,27 @@
 \section{Timing of photons coming from $^{10}$C background}
 
+Background from $\Cten$ could be significant at a shallow detector depth.
+Here we discuss separation of $\vbb$-decay events from $\Cten$ background using 
+differences in PE arrival time distributions between signal and background events.
+$\Cten$ decays to a positron and a gamma. The positron produces scintillation light 
+along its trajectory of a few mm before it stops and anihillates into two 0.511~keV 
+gammas. The kinetic energy of the positron from $\Cten$ is smaller than total kinetic
+energy of the electrons from $\vbb$-decay. Therefore the amount of scintillation 
+light produced at the primary vertex by the positron is smaller than the amount of 
+scintillation light produced by electrons in $\vbb$-decay. The scintillation light from 
+gammas is produced at several secondary verticies along gammas trajectories of $\sim X0$. 
+This results in a PE arrival time distribution for $\Cten$ events that is shifted towards 
+longer times with respect to the $\vbb$-decay events.
+
+This time shift would be valid for any backround whith a positron in the final state. In 
+$\Cten$ this shift is increased because $\Cten$ decays via an excited state of $^{10}$B(718),
+which has a half-life time of $\sim$1~ns, so that 0.718~MeV gamma has a delay with respect
+to the positron that is detectable by photo-detectors with $\sim$100~ps time resolution.
+
+In the following we assess the separation between $\vbb$-decay and $\Cten$ events due to the 
+time shift in the PE arrival time distribution. We discuss requirements on the primary vertex 
+reconstruction resolution and the time resolution of the photo-detectors.
+
 Typical energy deposition by $^{10}$C events is shown in
 Fig.~\ref{fig:Edep_C10}. Vertical lines indicate Q-value of $\Te$ and 
 $\pm$10\% region around Q-value. In order to include detector energy resolution 
@@ -35,11 +57,15 @@ PE is smaller for $\Cten$ events. Delayed 0.718~MeV gamma in some of $\Cten$ eve
 also result in a delay in the photon arrival time with respect to $\vbb$-decay events.
 
 Figure~\ref{fig:Arrival_time_C10_overlaid} compares PE arrival times between 
-$\vbb$-decay and $\Cten$ events. Prompt $\Cten$ is a simplified simulation where 
-a positron is simultaneously produced with 0.718~MeV gamma. The difference between
+$\vbb$-decay and $\Cten$ events. To separate the time shift due to smaller kinetic 
+energy of the positron and due to the decay via a long lived $^{10}$B(718) state we 
+include simulation of prompt $\Cten$ decays. The prompt $\Cten$ is a simplified simulation 
+where a positron is simultaneously produced with a 0.718~MeV gamma. The difference between
 prompt $\Cten$ and $\vbb$-decay is caused by presence of a positron and this 
-difference is typical event by even basis. An additional difference due to delayed
-gamma shown in Fig.~\ref{fig:Arrival_time_C10_overlaid} is an average over 1000 events.
+difference is typical on event by event level. An additional difference due to delayed
+gamma shown in Fig.~\ref{fig:Arrival_time_C10_overlaid} is an average effect over 1000 events. 
+Significant variations are possible on event by event level since $^{10}$B(718) decay 
+time is exponential.
 
 \begin{figure}[h]
   \centering
