Fixing typos in th C10 appendix

--- a/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
+++ b/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
@@ -4,7 +4,7 @@ Background from $\Cten$ could be significant at a shallow detector depth.
 Here we discuss separation of $\vbb$-decay events from $\Cten$ background using 
 differences in PE arrival time distributions between signal and background events.
 $\Cten$ decays to a positron and a gamma. The positron produces scintillation light 
-along its trajectory of a few mm before it stops and anihillates into two 0.511~keV 
+along its trajectory of a few mm before it stops and annihilates into two 0.511~keV 
 gammas. The kinetic energy of the positron from $\Cten$ is smaller than total kinetic
 energy of the electrons from $\vbb$-decay. Therefore the amount of scintillation 
 light produced at the primary vertex by the positron is smaller than the amount of 
@@ -13,7 +13,7 @@ gammas is produced at several secondary verticies along gammas trajectories of $
 This results in a PE arrival time distribution for $\Cten$ events that is shifted towards 
 longer times with respect to the $\vbb$-decay events.
 
-This time shift would be valid for any backround whith a positron in the final state. In 
+This time shift would be valid for any background with a positron in the final state. In 
 $\Cten$ this shift is increased because $\Cten$ decays via an excited state of $^{10}$B(718),
 which has a half-life time of $\sim$1~ns, so that 0.718~MeV gamma has a delay with respect
 to the positron that is detectable by photo-detectors with $\sim$100~ps time resolution.
@@ -46,10 +46,10 @@ a prompt positron accompanied by a delayed 0.718~MeV gamma. The positron energy
 has to be 0.79~MeV for an event to have energy deposition equal to Q-value of
 $\Te$ $\vbb$-decay.
 
-The positron from $\Cten$ on average travels 4~mm before it stops and anihilates
+The positron from $\Cten$ on average travels 4~mm before it stops and annihilates
 producing two 0.511~MeV gammas. Those gammas then interact in the scintillator via 
 Compton scattering and photo-electric effect along while they loose their energy
-over $\sim X_0$ distance. Therefore light emmited in $\Cten$ events originates from
+over $\sim X_0$ distance. Therefore light emitted in $\Cten$ events originates from
 several clusters that are spread over $\sim X_0$. Significant fraction of the 
 early PE would be due to primary positron cluster. Because the positron has smaller 
 kinetic energy than kinetic energy of electrons from $\vbb$-decay the amount of early 
@@ -79,7 +79,7 @@ time is exponential.
 \label{fig:Arrival_time_C10_overlaid}
 \end{figure}
 
-As can be seen from Fig.~\ref{fig:Arrival_time_C10_overlaid} there is a noticable difference
+As can be seen from Fig.~\ref{fig:Arrival_time_C10_overlaid} there is a noticeable difference
 in the shape of PEs arrival time distribution between $\vbb$-decay and $\Cten$ events. A fit
 to a template shapes can be used to discriminate between signal and background. In this study,
 to distinguish between $\vbb$-decay and $\Cten$ events we count total number of PEs in the
@@ -92,13 +92,13 @@ distributed within the fiducial volume and the uncertainty on the vertex positio
 is taken into account, the early light sample is defined as PEs with $\Delta T=T_{measured} - 
 T_{predicted}<$1~ns, where $T_{measured}$ is measured arrival time and $T_{predicted}$
 is predicted arrival time based on the primary vertex location: 
-$T^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$ is avearge photon velocity
+$T^{predicted} = |r_{hit} - r_{vtx}|/v_{phot}$, where $v_phot = c/1.53$ is average photon velocity
 in the scintillator, $r_{hit}$ is the position of the PE on the photo-detector, and $r_{vtx}$ is the
 reconstructed position of the primary vertex.
 
 
 Numbers of Cherenkov and scintillation PEs in early light samples for $\vbb$-decay and 
-$\Cten$ central events are shown in Fig.~\ref{fig:NPhotDist_C10}. Perfect reconstrution of the 
+$\Cten$ central events are shown in Fig.~\ref{fig:NPhotDist_C10}. Perfect reconstruction of the 
 primary vertex is assumed and a time cut of 33.5~ns is used to define early light sample. 
 Distributions of total number of PEs in the early light sample for $\vbb$-decay and $\Cten$ events
 normalized to the same number of simulated events are overlaid in Fig.~\ref{fig:NPhot_compare_central}.
@@ -124,7 +124,7 @@ background.
   \centering
   \includegraphics[width=0.95\textwidth]{hMomNPhot_Te130vsC10_allLight_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
   \caption{Total number of PEs in the early light sample. Comparison between $^{130}$Te 0{\nbb} decay 
-    (solid red line) and $^{10}$C events (dashed greem line). Events are simulated at the center of the 
+    (solid red line) and $^{10}$C events (dashed green line). Events are simulated at the center of the 
     detector. Perfect vertex reconstruction - true vertex position is used. Time cut of 
     33.5~ns on the photon arrival time is applied. Histograms are normalized to 1000 events.}
 \label{fig:NPhot_compare_central}
@@ -193,7 +193,7 @@ distributed within the fiducial volume and reconstructed vertex smeared with 10~
         (Right) Total number of PEs in the early light sample.
         $^{10}$C events with energy deposition in the $\pm$10\% energy range around Q-value are
         selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
-        {\bf Vetrex is smeared with 10~cm resolution.}}
+        {\bf Vertex is smeared with 10~cm resolution.}}
 \label{fig:NPhot_compare_rndVtx_Smear10cm}
 \end{figure*}
 
@@ -213,7 +213,7 @@ distributed within the fiducial volume and reconstructed vertex smeared with 30~
         (Right) Total number of PEs in the early light sample.
         $^{10}$C events with energy deposition in the $\pm$10\% energy range around Q-value. are
         selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
-        {\bf Vetrex is smeared with 30~cm resolution.}}
+        {\bf Vertex is smeared with 30~cm resolution.}}
 \label{fig:NPhot_compare_rndVtx_Smear30cm}
 \end{figure*}
 
@@ -232,7 +232,7 @@ distributed within the fiducial volume and reconstructed vertex smeared with 50~
         (Right) Total number of PEs in the early light sample.
         $^{10}$C events with energy deposition in the $\pm$10\% energy range around Q-value are
         selected. Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
-        {\bf Vetrex is smeared with 50~cm resolution.}}
+        {\bf Vertex is smeared with 50~cm resolution.}}
 \label{fig:NPhot_compare_rndVtx_Smear50cm}
 \end{figure*}
 
